Fixed video going out of screen in fullscreen mode

--- a/src/components/XBlockVideoViewer/XBlockVideoViewer.scss
+++ b/src/components/XBlockVideoViewer/XBlockVideoViewer.scss
@@ -4,17 +4,6 @@
 .imported-xblock-video{
   border: none;
 }
-
 .responsive-video::before{
-  padding-top: 143%;
-}
-@media (min-width: 768px){
-  .responsive-video::before{
-    padding-top: 98%;
-  }
-}
-@media (min-width: 992px){
-  .responsive-video::before{
-    padding-top: 78%;
-  }
+  padding-top: 62%;
 }
